objects/vlocity_cmt__OrchestrationPlan__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__IsBeingWatched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Being Watched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastOrchestrationItemUpdate__c</fullName>
        <label>Last Orchestration Item Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Orchestration Plans</relationshipLabel>
        <relationshipName>OrchestrationPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Orchestration Plan</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__OrderId__c</columns>
        <columns>vlocity_cmt__LastOrchestrationItemUpdate__c</columns>
        <columns>vlocity_cmt__IsBeingWatched__c</columns>
        <columns>vlocity_cmt__State__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Plan{0000000}</displayFormat>
        <label>Orchestration Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orchestration Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>